kubernetes/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: mern 
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80          
      nodePort: 30001
